<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.mikechung.android_messaging_app_implementation.register.Login">

    <EditText
        android:id="@+id/login_account"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:maxHeight="70dp"
        android:inputType="text"
        android:hint="@string/account"
        />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxHeight="70dp"
        android:layout_below="@id/login_account"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_login"
        android:id="@+id/login_btn"
        android:layout_below="@id/login_password"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_sign_up"
        android:id="@+id/goto_signup"
        android:layout_below="@id/login_btn"/>

</RelativeLayout>
